--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     </div>
                     <div>
                         <h2 class="about__subtitle">Hi I'am Aulia Andini Rozita.</h2>
-                        <span class="about__profession">Fangirling</span>
+                        <span class="about__profession">Newbie Programmer</span>
                         <p class="about__text">Hallo semuanya nama saya adalah Aulia Andini saya baru belajar bahasa pemrograman html&css dan saya mencoba membuat sebuah website portfolio untuk hasil/uji coba saya.</p>
                     </div>
                 </div>
