--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <main class="l-main">
             <section class="about section" id="about">
-                <h2 class="section-title">About</h2>
+                <h2 class="section-title">About Me</h2>
                 <div class="about__container bd-grid">
                     <div class="about__img">
                         <img src="https://th.bing.com/th/id/OIP.iYXB3r0y_x8eHQWJOrW9EQHaH0?pid=ImgDet&rs=1" alt="">
@@ -20,6 +20,7 @@
                         <h2 class="about__subtitle">Hi I'am Aulia Andini Rozita.</h2>
                         <span class="about__profession">Newbie Programmer</span>
                         <p class="about__text">Hallo semuanya nama saya adalah Aulia Andini saya baru belajar bahasa pemrograman html&css dan saya mencoba membuat sebuah website portfolio untuk hasil/uji coba saya.</p>
+                        <p class="about__text">Saya mengagumi Nishimura Riki, karena dia sangat bertalenta terutama Dancenya yang sangat mengagumkan.</p>
                     </div>
                 </div>
             </section>
